2006-12-14  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (BUFFER_SIZE): Increase to 8192.

	* LineBufferedReader.java (incrLineNumber): New method.

	* SourceLocator.java: Extend org.xml.sax.Locator if SAX2 is set
	regardless of JAXP-1.3.

2006-12-12  Per Bothner  <per@bothner.com>

	* WriterManager.java (WriterRef): New class extends WeakReference.
	Use it to prefernt a strong reference from WriterManager to Writer.
	(register, unregister): Change to return/take Object rather than index.
	This fixes Savannah bug #15876: "Ports are not reclaimed automatically
	when becoming inaccesible".

2006-12-04  Per Bothner  <per@bothner.com>

	* URI_utils.java (FiletoURL): Avoid deprecated File.toURL
	if File.toURI is available.

	* URI_utils.java (makeClassResourceURI): Use StringBuilder #ifdef JAVA5.

	* URI_utils.java (relativize): New static method.

2006-11-25  Per Bothner  <per@bothner.com>

	* SourceMessages.java: Remove needless import.

2006-11-24  Per Bothner  <per@bothner.com>

	* Lexer.java (tokenBufferAppend): Implement surrogates support.

2006-11-22  Per Bothner  <per@bothner.com>

	* Char.java: Rename Consumer methods append->write.
	* EnglishIntegerFormat.java: Likewise.
	* ReportFormat.java: Likewise.

2006-11-20  Per Bothner  <per@bothner.com>

	* Printable.java: Moved from gnu.mapping.
	Change parameter type to Consumer.
	* Makefile.am: Update accordingly.
	* ReportFormat.java (print): New static convenience method.

2006-11-18  Per Bothner  <per@bothner.com>

	* EnglishIntegerFormat.java: Update writeChars -> append.

	* SourceError.java (toString) Add needed package prefix for the
	PreProcess case where we don't have Throwable.getCause.

2006-11-17  Per Bothner  <per@bothner.com>

	* Char.java (print(Consumer)): New method.
	(print(int,Consumer)): New static method, handles surrogates.

2006-11-13  Per Bothner  <per@bothner.com>

	* SourceLocator.java: New interface.
	* Makefile.am (java_sources): Update accordingly.